--- a/colors.html
+++ b/colors.html
@@ -13,5 +13,25 @@
     <!--Background Colors-->
     <p class="bg-slate-800 text-white">tailwindcss is awesome</p>
     <p class="bg-red-500 text-yellow-500">tailwindcss is awesome</p>
+    <!--Text Underline-->
+    <p class="underline decoration-yellow-500">tailwindcss is awesome</p>
+    <!--Border Colors-->
+    <input type="text" class="border border-green-400"/>
+    <!--Divided colors-->
+    <div class="divide-y divide-blue-300">
+        <div>Item</div>
+        <div>Item</div>
+        <div>Item</div>
+        <div>Item</div>
+        <div>Item</div>
+    </div>
+    <!--Outline Colors-->
+    <button class="outline outline-red-500">Hello</button>
+    <!--Box Shadow-->
+    <div class="shadow-lg bg-blue-300 shadow-red-500">Test</div>
+    <!--Accent Colors-->
+    <input type="checkbox" class="accent-red-500" checked/>
+    <!--Arbitrary Colors-->
+    <div class="bg-[#427fab]">Hello</div>
 </body>
 </html>
